# edistribuzione_scraper

./: README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
edistribuzione_scraper/: items.py  middlewares.py  pipelines.py  settings.py
edistribuzione_scraper/spiders/: curvedicarico.py  login.py
