[tool.poetry]
name = "edistribuzione_scraper"
version = "0.1.0"
description = ""
authors = ["Gab25 <gabrielesorci.25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
